--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fetch": "^1.1.0",
     "node-fetch": "^3.3.2",
     "request": "^2.88.2",
+    "require": "^2.4.20",
     "yarn": "^1.22.22"
   }
 }
